update application.properties and security/SecurityConfig.java for generating production ready jar file